# generated/src/main/java/com/api/ShukanTalentJohoBFFApi.java
@@ -5,13 +5,15 @@
  */
 package com.api;
 
+import java.util.List;
+
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 
-import com.model.ShukanTalentJohoSearch;
+import com.model.ShukanTalentJohoBFF;
 
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
@@ -26,15 +28,15 @@ import jakarta.validation.constraints.Min;
 import jakarta.validation.constraints.NotNull;
 import jakarta.validation.constraints.Size;
 
-@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2023-06-12T21:30:49.581521+09:00[Asia/Tokyo]")
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2023-06-11T16:02:48.702321+09:00[Asia/Tokyo]")
 @Validated
-@Tag(name = "shukanTalentJohoSearch", description = "the shukanTalentJohoSearch API")
+@Tag(name = "shukanTalentJohoBFF", description = "the shukanTalentJohoBFF API")
 @RequestMapping("api")
-public interface ShukanTalentJohoSearchApi {
+public interface ShukanTalentJohoBFFApi {
 
     /**
-     * GET /shukanTalentJohoSearch : １週間においてのタレントごとの情報を返す
-     * １週間においてのタレントごとの情報を返す
+     * GET /shukanTalentJohoBFF : １週間においてのタレントごとの情報を返すBFF
+     * １週間においてのタレントごとの情報を返すBFF
      *
      * @param targetNentsuki  (required)
      * @param targetShu  (required)
@@ -42,17 +44,17 @@ public interface ShukanTalentJohoSearchApi {
      * @return １週間においてのタレントごとの情報を正常取得 (status code 200)
      */
     @Operation(
-        operationId = "getShukanTalentJohoSearch",
-        summary = "１週間においてのタレントごとの情報を返す",
-        tags = { "shukanTalentJohoSearch" },
+        operationId = "getShukanTalentJohoBFF",
+        summary = "１週間においてのタレントごとの情報を返すBFF",
+        tags = { "shukanTalentJohoBFF" },
         responses = {
             @ApiResponse(responseCode = "200", description = "１週間においてのタレントごとの情報を正常取得", content = {
-                @Content(mediaType = "application/json", schema = @Schema(implementation = ShukanTalentJohoSearch.class))
+                @Content(mediaType = "application/json", schema = @Schema(implementation = ShukanTalentJohoBFF.class))
             })
         }
     )
-    @GetMapping("/shukanTalentJohoSearch")
-    ResponseEntity<ShukanTalentJohoSearch> getShukanTalentJohoSearch(
+    @GetMapping("/shukanTalentJohoBFF")
+    ResponseEntity<List<ShukanTalentJohoBFF>> getShukanTalentJohoBFF(
         @NotNull @Min(199001) @Max(210012) @Parameter(name = "targetNentsuki", description = "", required = true) @Valid @RequestParam(value = "targetNentsuki", required = true) Integer targetNentsuki,
         @NotNull @Min(1) @Max(5) @Parameter(name = "targetShu", description = "", required = true) @Valid @RequestParam(value = "targetShu", required = true) Integer targetShu,
         @Size(max = 30) @Parameter(name = "talentName", description = "") @Valid @RequestParam(value = "talentName", required = false) String talentName
