# src/main/java/com/talent/controller/ShukanTalentJohoBFFController.java
@@ -1,11 +1,12 @@
 package com.talent.controller;
+import java.util.List;
 
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 
-import com.api.ShukanTalentJohoSearchApi;
-import com.model.ShukanTalentJohoSearch;
-import com.talent.service.ShukanTalentJohoSearchService;
+import com.api.ShukanTalentJohoBFFApi;
+import com.model.ShukanTalentJohoBFF;
+import com.talent.service.ShukanTalentJohoBFFService;
 
 import jakarta.validation.Valid;
 import jakarta.validation.constraints.Max;
@@ -16,17 +17,17 @@ import lombok.RequiredArgsConstructor;
 
 @Controller
 @RequiredArgsConstructor
-public class ShukanTalentJohoSearchController implements ShukanTalentJohoSearchApi{
-	
-    private final ShukanTalentJohoSearchService service;
+public class ShukanTalentJohoBFFController implements ShukanTalentJohoBFFApi{
 
+    private final ShukanTalentJohoBFFService service;
+	
 	@Override
-	public ResponseEntity<ShukanTalentJohoSearch> getShukanTalentJohoSearch(
+	public ResponseEntity<List<ShukanTalentJohoBFF>> getShukanTalentJohoBFF(
 			@NotNull @Min(199001) @Max(210012) @Valid Integer targetNentsuki,
 			@NotNull @Min(1) @Max(5) @Valid Integer targetShu, @Size(max = 30) @Valid String talentName) {
-
-		// ShukanTalentJohoSearchServiceより取得
-		ShukanTalentJohoSearch response = service.select(targetNentsuki, targetShu, talentName);
+		
+		// ShukanTalentJohoSearchBFFServiceより取得
+		List<ShukanTalentJohoBFF> response  = service.select(targetNentsuki, targetShu, talentName);
 		return ResponseEntity.ok(response);
 	}
 }
